<resources>
    <string name="app_name">Thư Viện UFM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Võ Trọng Kha - Trần Lê  Huy</string>
    <string name="nav_header_subtitle">Quản lý mượn trả sách thư viện UFM</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_management_borrow_book">Quản lý phiếu mượn</string>
    <string name="menu_management_return_book">Quản lý phiếu trả</string>
    <string name="menu_management_type_book">Quản lý loại sách</string>
    <string name="menu_management_account">Quản lý tài khoản</string>
    <string name="menu_management_reader">Quản lý độc giả</string>
    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="years">
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <!-- Thêm các năm khác nếu cần -->
    </string-array>
    <string name="menu_management_book">Quản lý sách</string>
    <string name="menu_management_pay_book">Quản lý phiếu trả</string>
</resources>
